--- a/src/index.html
+++ b/src/index.html
@@ -13,16 +13,6 @@
         <script src="js/ckeditor.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
-        	@font-face {
-				font-family: "dinlight";
-				src: url(http://www.smitetierlist.com/dinnrounded-light.otf) format("opentype");
-			}
-
-			@font-face {
-				font-family: "dinbold";
-				src: url(http://www.smitetierlist.com/dinnrounded-medium.otf) format("opentype");
-			}
-
         	body {
         		font-family: "DIN Next Rounded LT Pro", "Roboto Condensed", sans-serif;
         		font-weight: lighter;
@@ -33,7 +23,7 @@
 		<div id="banner-container">
 			<div id="banner-inner-container">
 				<div id="logo">
-					<a href="http://www.smitetierlist.com/">
+					<a href="https://smite-tierlist.herokuapp.com/src/index.html">
 						<img src="images/imperial-gaming.png" alt="Imperial Gaming">
 					</a>
 				</div>
@@ -136,11 +126,7 @@
             <br>
 			<div id="gods">
 			</div>
-			<div id="lastupdated">
-						</div>
 		</div>
-		<div id="blog">
-					</div>
 		<div id="legend">
 			<div>
 				<span class="tier-label round ss">SS</span>
@@ -173,39 +159,16 @@
 		</div>
 		<!-- <hr> -->
 		<div id="array_text_section">
-				<!-- <p id="list_title" class="save_text"></p> -->
-				<p id="array_0" class="save_text"></p>
-				<p id="array_1" class="save_text"></p>
-				<p id="array_2" class="save_text"></p>
-				<p id="array_9" class="save_text"></p>
-				<p id="array_3" class="save_text"></p>
-				<p id="array_4" class="save_text"></p>
-				<p id="array_5" class="save_text"></p>
-				<p id="array_6" class="save_text"></p>
-				<p id="array_7" class="save_text"></p>
-				<p id="array_8" class="save_text"></p>
-				<p id="array_10" class="save_text"></p>
-				<p id="array_11" class="save_text"></p>
-				<!-- <p id="list_end" class="save_text">};</p> -->
-				<textarea name="save area" id="tierlist_text" cols="30" rows="10" value="" class="hide_text"></textarea>
+				<textarea name="save_area" id="tierlist_text" cols="30" rows="10" value="" class="hide_text"></textarea>
 		</div>
 	</div>
-	<div id="ads">
-        <a href="http://amzn.com/lm/R2PAJJS5PU8LZO" id="adlink1" target="_blank">
-            <img src="http://www.smitetierlist.com/images/diemtwitch.jpg" alt="Iwitch" id="adimage1" style="display: inline;">
-        </a>
-        <a href="http://www.twitch.tv/dmbrandon" id="adlink2" target="_blank">
-        	<img src="http://www.smitetierlist.com/images/diemcrunchyroll.jpg" alt="Crunchyroll" id="adimage2" style="display: inline;">
-        </a>
-    </div>
-
                 </div>
 			</div>
 		</div>
 
 		<div id="login-dialog" style="display: none; z-index: 9999; position: relative;">
     
-            <form action="http://www.smitetierlist.com/" method="post">
+            <form action="" method="post">
                 <div class="form-group">
                     <label for="username">Username</label>
                     <input type="text" name="username" class="form-control" id="username" placeholder="Please enter your username">
@@ -254,19 +217,6 @@
             window.onload = function() {
                 resizeTiers();
             };
-        </script>
-        <script>
-        //   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        //   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        //   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        //   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        //   ga('create', 'UA-59977719-1', 'auto');
-        //   ga('send', 'pageview');
-          loadGods();
-          //displayList();
-		  resizeTiers();
-		  //assignDamageType();
         </script>
 	</body>
 
