--- a/src/index.html
+++ b/src/index.html
@@ -47,23 +47,23 @@
 		<div id="tierlist-tab" class="tab selected">
 			Team 
         </div>
-        <div id="tykon-tab" class="tab">
-			Tyk0n
+        <div id="solo-tab" class="tab">
+			Solo
         </div>
-        <div id="water-tab" class="tab">
-			Water
+        <div id="jungle-tab" class="tab">
+			Jungle
         </div>
-        <div id="purly-tab" class="tab">
-			Purly
+        <div id="mid-tab" class="tab">
+			Mid
         </div>
-        <div id="sa1ko-tab" class="tab">
-			Sa1ko 
+        <div id="support-tab" class="tab">
+			Support 
         </div>
-        <div id="imperial-tab" class="tab">
-			Imperial
+        <div id="adc-tab" class="tab">
+			ADC
 		</div>
 		<div id="legend-tab" class="tab">
-			legend
+			Legend
 		</div>
 
 	</div>
@@ -157,7 +157,6 @@
 	        	<p>Very low pick rate and or competitively non-viable even in the hands of masters.</p>
 	        </div>
 		</div>
-		<!-- <hr> -->
 		<div id="array_text_section">
 				<textarea name="save_area" id="tierlist_text" cols="30" rows="10" value="" class="hide_text"></textarea>
 		</div>
@@ -166,34 +165,12 @@
 			</div>
 		</div>
 
-		<div id="login-dialog" style="display: none; z-index: 9999; position: relative;">
-    
-            <form action="" method="post">
-                <div class="form-group">
-                    <label for="username">Username</label>
-                    <input type="text" name="username" class="form-control" id="username" placeholder="Please enter your username">
-                </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" name="password" class="form-control" id="password" placeholder="Please enter your password">
-                </div>
-                <input type="hidden" name="action" value="login">
-                <input type="submit" class="btn btn-default" name="wp-submit" value="Login">
-                <button class="btn btn-default" id="close-login">Cancel</button>
-            </form>
-
-        </div>
-
-
         <script src="js/jquery-1.11.2.min.js"></script>
 	    <script src="js/jquery-ui-1.9.2.custom.js"></script>
 	    <script src="js/jquery-ui.js"></script>
         <script src="js/jquery.tooltipster.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <!-- <script src="//use.edgefonts.net/abel.js"></script>
-        <script src="//cdn.ckeditor.com/4.4.7/standard/ckeditor.js"></script> -->
-
-
+		<script src="js/bootstrap.min.js"></script>
+		
         <script>
           var tierboxes = ["#new","#ss","#splus","#s","#aplus","#a","#bplus","#b","#c","#d","#gods"];
         </script>
@@ -208,9 +185,6 @@
         <script src="js/admin.js" type="text/javascript"></script>
         <script>
           var draggable = true;
-          var editListId = null;
-          var tierListId = 704457;
-          var loggedIn = false;
         </script>
 
         <script>
